--- a/app/client/app/main/main.html
+++ b/app/client/app/main/main.html
@@ -2,8 +2,8 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
+    <h1>Online Banking</h1>
+    <p class="lead">Project for MEANWorks</p>
     <img src="assets/images/yeoman.png" alt="I'm Yeoman">
   </div>
 </header>
