enhance accounts template

--- a/app/client/app/accounts/accounts.html
+++ b/app/client/app/accounts/accounts.html
@@ -1,17 +1,27 @@
-<div>This is the accounts view.</div>
-<form class="account-form" ng-submit="addAccount()" name="accountForm">
-   <input type="text" class="form-control" ng-model="newAccountName" placeholder="Enter a new account name" required></input>
-   <input type="text" class="form-control" ng-model="newAccountNumber" placeholder="Enter a new account number" required></input>
-   <input class="btn btn-primary" type="submit" ng-disabled="commentForm.$invalid" value="Post">
- </form>
-<ul class="account-list">
-  <li ng-repeat="account in accounts">
-    <header>{{ account.name }}</header>
-    <p>{{ account.number }}</p>
-    <a class="btn btn-danger" href="#"  ng-click="removeAccount(account)">
-      <i class="fa fa-trash-o fa-lg"></i> Delete
-    </a>
-  </li>
-</ul>
 
-<a href="/" class="btn btn-default">&lt; Home</a>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <h1>Accounts</h1>
+  </div>
+  <div class="row-fluid">
+    <h4>Connect a New Account</h4>
+    <form class="account-form" ng-submit="addAccount()" name="accountForm">
+       <input type="text" class="form-control" ng-model="newAccountName" placeholder="Enter a new account name" required></input>
+       <input type="text" class="form-control" ng-model="newAccountNumber" placeholder="Enter a new account number" required></input>
+       <input class="btn btn-primary" type="submit" ng-disabled="commentForm.$invalid" value="Post">
+     </form>
+  </div>
+  <div class="row-fluid">
+    <h4>Connected Accounts</h4>
+    <ul class="account-list">
+      <li ng-repeat="account in accounts">
+        <span>{{ account.name }}</span>
+        <span>{{ account.number }}</span>
+        <a class="btn btn-danger" href="#"  ng-click="removeAccount(account)">
+          <i class="fa fa-trash-o fa-lg"></i> Delete
+        </a>
+      </li>
+    </ul>
+  </div>
+  <a href="/" class="btn btn-default">&lt; Home</a>
+</div>
