--- a/app/client/app/transactions/transactions.html
+++ b/app/client/app/transactions/transactions.html
@@ -1,23 +1,39 @@
-<h1>Transactions</h1>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <h1>Transactions</h1>
+  </div>
+  <div class="row-fluid">
+    <table class="transaction-list table table-striped table-bordered">
+      <thead>
+        <tr>
+          <td>Date</td>
+          <td>Description</td>
+          <td>Category</td>
+          <td>Amount</td>
+          <td>Action</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="transaction in transactions">
+          <td class="col-md-2">{{ transaction.date }}<i ng-hide="transaction.date!='pending'" class="fa fa fa-spinner fa-spin">?</i></td>
+          <td class="col-md-3">{{ transaction.desc.short }}</td>
+          <td class="col-md-3">{{ transaction.category }}</td>
+          <td class="col-md-2">{{ transaction.amount }}</td>
+          <td class="col-md-2">
+            <a class="btn btn-info" href="#"  ng-click="disputeTransaction(transaction)" ng-if="transaction.dispute==false">
+              <i class="fa fa-flag-o fa-lg"></i>
+              Dispute
+            </a>
+            <a class="btn btn-danger" href="#"  ng-click="cancelDisputeTransaction(transaction)" ng-if="transaction.dispute==true">
+              <i class="fa fa-flag-o fa-lg"></i>
+              Cancel Dispute
+            </a>
 
-<table class="transaction-list">
-  <tbody>
-    <tr ng-repeat="transaction in transactions">
-      <td>{{ transaction.date }}<i ng-hide="transaction.date!='pending'" class="fa fa fa-spinner fa-spin">?</i></td>
-      <td>{{ transaction.amount }}</td>
-      <td>
-        <a class="btn btn-info" href="#"  ng-click="disputeTransaction(transaction)" ng-if="transaction.dispute==false">
-          <i class="fa fa-flag-o fa-lg"></i>
-          Dispute
-        </a>
-        <a class="btn btn-danger" href="#"  ng-click="cancelDisputeTransaction(transaction)" ng-if="transaction.dispute==true">
-          <i class="fa fa-flag-o fa-lg"></i>
-          Cancel Dispute
-        </a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-<a href="/" class="btn btn-default">&lt; Home</a>
+    <a href="/" class="btn btn-default">&lt; Home</a>
+  </div>
+</div>
