add changes :balloon:

--- a/app/client/app/accounts/accounts.html
+++ b/app/client/app/accounts/accounts.html
@@ -17,7 +17,7 @@
         <span>{{ account.name }}</span>
         <span>{{ account.number }}</span>
         <a class="btn btn-danger" href="#"  ng-click="removeAccount(account)">
-          <i class="fa fa-trash-o fa-lg"></i> Delete
+          <i class="glyphicon-remove-circle glyphicon"></i> Delete
         </a>
       </li>
     </ul>
